--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 server.port=6060
+
+#mysql
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/visual_tools?useSSL=false&characterEncoding=utf-8
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+#jpa
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database=mysql
+spring.jpa.generate-ddl=true
+spring.data.jpa.repositories.enabled=true
