--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,16 @@
             <artifactId>spring-boot-starter-jdbc</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+        </dependency>
+
         <!-- curator start-->
         <dependency>
             <groupId>org.apache.curator</groupId>
@@ -108,7 +118,7 @@
             <artifactId>jedis</artifactId>
             <version>3.1.0</version>
         </dependency>
-
+        
         <!-- test -->
         <dependency>
             <groupId>junit</groupId>
