--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database=mysql
 spring.jpa.generate-ddl=true
 spring.data.jpa.repositories.enabled=true
+
+spring.resources.static-locations=classpath:/static/,classpath:/templates/
+spring.mvc.static-path-pattern=/static/**
+spring.mvc.view.prefix=classpath:/templates/
+spring.mvc.view.suffix=.html
