[ADD] 增加zk树展示以及节点操作

--- a/pom.xml
+++ b/pom.xml
@@ -166,6 +166,8 @@
                     <include>**/*.woff</include>
                     <include>**/*.woff2*</include>
                     <include>**/*.ttf</include>
+                    <include>**/*.png</include>
+                    <include>**/*.gif</include>
                 </includes>
                 <filtering>false</filtering>
             </resource>
